objects/Meeting__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Meetings</relationshipLabel>
        <relationshipName>Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Meeting_ID__c</fullName>
        <label>Client Meeting ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_ID__c</fullName>
        <label>Event ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lanyon_Migrated_ID__c</fullName>
        <externalId>true</externalId>
        <label>Lanyon Migrated ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Meeting_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy_Meeting_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Date__c</fullName>
        <label>Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meeting_Id__c</fullName>
        <label>Meeting Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Status__c</fullName>
        <label>Registration Status</label>
        <type>TextArea</type>
    </fields>
    <description>This custom object was created for the SFDC integration with Meetingview using CozyRoc. This integration will update all Apple events submitted after 9/1/2010 and will remove those events that have an end date &gt; 60 days in the past that have not been used in a timecard entry yet. Any events used in a timecard entry will continue to show in the search list. The synchronization process runs every 15 minutes between 4:00AM PT and 9:30PM PT. Managed by SC Engineering.</description>
    <label>Meeting</label>
    <nameField>
        <label>Meeting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meetings</pluralLabel>
    <sharingModel>Read</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>